# adl-demo

./: .gitignore  ChangeLog.md  README.md  demo-server-example1.yaml  package.yaml  stack.yaml
adl/: api.adl  api.adl-hs  config.adl  config.adl-hs  types.adl  types.adl-hs
app/: Main.hs  Utils.hs
config-file/haskell/: README.md  demo-server-example2.yaml  package.yaml
config-file/haskell/adl/: config.adl
config-file/haskell/scripts/: generate-adl.sh
messageboard-api/: README.md
messageboard-api/adl/: api.adl  api.adl-hs  config.adl  config.adl-hs  types.adl  types.adl-hs
messageboard-api/haskell/: .gitignore  messageboard-server.cabal  package.yaml  stack.yaml
messageboard-api/haskell/app/: Server.hs
messageboard-api/haskell/src/: .adl-manifest  Main.hs  Server.hs  TimeStamp.hs  Utils.hs
messageboard-api/haskell/src/ADL/: Api.hs  Config.hs  Types.hs
messageboard-api/scripts/: adlc  generate-adl.sh
messageboard-api/typescript/: package.json  tsconfig.json
messageboard-api/typescript/src/: .adl-manifest  service-tests.ts
messageboard-api/typescript/src/adl/: api.ts  config.ts  resolver.ts  types.ts
messageboard-api/typescript/src/adl/sys/: annotations.ts
messageboard-api/typescript/src/service/: browser-http.ts  http.ts  node-http.ts  service-base.ts  service.ts
src/ADL/: Api.hs  Config.hs  Types.hs
