cabal-version: 1.12

name:           messageboard-server
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/timbod7/adl-demo>
homepage:       https://github.com/timbod7/adl-demo#readme
bug-reports:    https://github.com/timbod7/adl-demo/issues
author:         Tim Docker
maintainer:     tim@dockerz.net
copyright:      2020 Tim Docker
license:        BSD3
license-file:   LICENSE
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/timbod7/adl-demo

executable messageboard-server
  main-is: Main.hs
  hs-source-dirs:
      src
  other-modules:
      Server
      Utils
      Paths_messageboard_server
      TimeStamp
      ADL.Api
      ADL.Config
      ADL.Core
      ADL.Core.Nullable
      ADL.Core.StringMap
      ADL.Core.TypeToken
      ADL.Core.Value
      ADL.Sys.Adlast
      ADL.Sys.Types
      ADL.Types
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      Spock >=0.13.0.0 && <0.14
    , aeson >=1.4 && <1.5
    , base >=4.7 && <5
    , base64-bytestring >=1.0 && <1.1
    , bytestring >=0.10.8 && <0.11
    , containers >=0.6 && <0.7
    , http-types >=0.12 && <0.13
    , jwt >=0.10 && <0.11
    , password >=1.0 && <1.1
    , scientific >=0.3 && <0.4
    , stm >=2.5 && <3.0
    , text >=1.2 && <1.3
    , time >=1.8 && <1.9
    , unordered-containers >=0.2 && <0.3
    , vector >=0.12 && <0.13
    , yaml >=0.11 && <0.12
  default-language: Haskell2010
